[gd_scene load_steps=5 format=3 uid="uid://c4y651qb3u085"]

[ext_resource type="Texture2D" uid="uid://du7vlilewjxow" path="res://textures/coffin.png" id="1_24g4o"]
[ext_resource type="Script" path="res://textures/coffin.gd" id="1_gd7vr"]
[ext_resource type="Texture2D" uid="uid://2tajb25hw4pl" path="res://UI/Coffin/sleep_button_texture.png" id="3_ugxl1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbsdw"]
size = Vector2(76, 34.5)

[node name="Coffin" type="Node2D"]
script = ExtResource("1_gd7vr")

[node name="CoffinSprite" type="Sprite2D" parent="."]
scale = Vector2(0.1125, 0.1125)
texture = ExtResource("1_24g4o")
centered = false

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="coffin_detect_collision" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(26, 7.25)
shape = SubResource("RectangleShape2D_wbsdw")
debug_color = Color(0, 0.627451, 0.498039, 0.419608)

[node name="position_marker" type="Marker2D" parent="DetectArea"]
position = Vector2(54, 16)
scale = Vector2(0.1125, 0.1125)

[node name="SleepButton" type="TextureButton" parent="."]
visible = false
offset_left = 15.0
offset_top = -8.0
offset_right = 36.0
texture_normal = ExtResource("3_ugxl1")
ignore_texture_size = true
stretch_mode = 0

[connection signal="area_entered" from="DetectArea" to="." method="_on_detect_area_area_entered"]
[connection signal="area_exited" from="DetectArea" to="." method="_on_detect_area_area_exited"]
[connection signal="pressed" from="SleepButton" to="." method="_on_sleep_button_pressed"]
